libkmpris: set active player index to -1 when no player matches active player

Amends 2f809bd794076c8df3e87af25b9c2020c562dad1

BUG: 482756
FIXED-IN: 6.0.2